website/websites/u64q/code/revcomp.1.scala.log

Tue, 12 May 2009 16:10:17 GMT

MAKE:
mv revcomp.scala revcomp.scala
mv: `revcomp.scala' and `revcomp.scala' are the same file
make: [revcomp.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.7.4.final/bin/scalac -optimise revcomp.scala
revcomp.scala:8: error: value zip is not a member of java.lang.String
   for ((a, b) <- "TAGCVHRMYKBDU" zip "ATCGBDYKRMVHA") {
                                  ^
one error found
make: [revcomp.scala_run] Error 1 (ignored)
5.06s to complete and log all make actions

COMMAND LINE:
env JAVA_OPTS=-Xmx512m /usr/bin/java -server -Xbootclasspath/a:/usr/local/src/scala-2.7.4.final/lib/scala-library.jar revcomp 0 < revcomp-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: revcomp
Caused by: java.lang.ClassNotFoundException: revcomp
	at java.net.URLClassLoader$1.run(URLClassLoader.java:200)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:188)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:252)
	at java.lang.ClassLoader.loadClassInternal(ClassLoader.java:320)
Could not find the main class: revcomp.  Program will exit.
